Commit : scrollbar fixes : spacing fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -501,7 +501,7 @@ footer a:hover {
     color: gold;
 }
 .swiper-slide p {
-    max-height: 30rem;
+    /* max-height: 30rem; */
     margin-top: 18pt;
 }
 /* .swiper-slide.overflow-needed p {
